# LieCraft

./: LICENSE  README.md  RULES.md  models.yaml  noxfile.py  orchestrate_random_multiplayer.sh  parse_gamelogs.py  play_game.sh  process_logs.py  pyproject.toml  run_api_serial.sh  run_array.sh  run_game_api.sh  run_game_vllm.sh  run_vllm_random_multiplayer.sh  run_vllm_server_submit_game.sh
configs/: config_ai_pool.yaml  config_human_pool.yaml
experiments/: docker_gaudi_launch.sh
figs/: def_winrate_vs_accusations.py  def_winrate_vs_accusations2.py  role_select_heatmap.py  score_sensitivity_plot.py
src/backend/: event_deck_cyberpunk.jsonl  server.py
src/deceptiongame/: actions.py  decks.py  inference_utils.py  llm_instructions.py  mission_manager.py  online_game_manager.py  payoff_calculator.py  player_human.py  player_llm.py  players.py  state_loader.py  tracer.py
src/deceptiongame/themes/: board_game_action_instructions.json  board_game_instructions.py  event_deck_fantasy.json  mission_deck_fantasy.json
src/deceptiongame/themes/criminal/: event_deck.py  rules.md  theme.py
src/deceptiongame/themes/default/: event_deck.py  rules.md  theme.py
src/deceptiongame/themes/energy_grid/: event_deck.py  rules.md  theme.py
src/deceptiongame/themes/finance_crisis/: event_deck.py  rules.md  theme.py
src/deceptiongame/themes/hospital/: event_deck.py  rules.md  theme.py
src/deceptiongame/themes/insurance/: event_deck.py  rules.md  theme.py
src/deceptiongame/themes/m_and_a/: event_deck.py  rules.md  theme.py
src/deceptiongame/themes/military/: event_deck.py  rules.md  theme.py
src/deceptiongame/themes/parenting/: event_deck.py  rules.md  theme.py
src/deceptiongame/themes/policing/: event_deck.py  rules.md  theme.py
src/frontend/: index_tabbed.html
src/llm_experiments/: constraint_n_expected_reward.py  example.py  plot_payoffs.ipynb  run_defection_rates.py  run_hf_array.py  run_hf_models_themes.py  run_multiplayer.py
tests/: llm_api_tests.py  test_game_manager.py  test_server.py  test_server_ai_players.py
